# atlas-hpc

./: .gitignore  Cargo.toml  README.md  instructions.md  rust-toolchain.toml
.cargo/: config.toml
crates/atlas-types/: Cargo.toml
crates/atlas-types/src/: lib.rs
crates/hot-tier/: Cargo.toml
crates/hot-tier/benches/: hot_tier_bench.rs
crates/hot-tier/src/: binance.rs  lib.rs
crates/intelligence/: Cargo.toml
crates/intelligence/src/: agent.rs  cache.rs  lib.rs  offload.rs  orchestrator.rs  tee.rs
crates/warm-tier/: Cargo.toml
crates/warm-tier/benches/: warm_tier_bench.rs
crates/warm-tier/src/: lib.rs
src/: main.rs
