[workspace]
members = [
    ".",
    "crates/atlas-types",
    "crates/hot-tier",
    "crates/warm-tier",
    "crates/intelligence",
]
resolver = "2"

[package]
name    = "atlas-mvp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "atlas-mvp"
path = "src/main.rs"

[dependencies]
atlas-types      = { workspace = true }
hot-tier         = { path = "crates/hot-tier" }
warm-tier        = { path = "crates/warm-tier" }
intelligence     = { path = "crates/intelligence" }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Atlas Finance <engineering@atlas.finance>"]
license = "UNLICENSED"

[workspace.dependencies]
# Shared types
atlas-types = { path = "crates/atlas-types" }

# Concurrency / lock-free
crossbeam        = "0.8"
crossbeam-channel = "0.5"
leapfrog         = "0.3"
dashmap          = "6"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Statistics (p-value calculations)
statrs = "0.17"

# Crypto (TEE stub)
aes-gcm = "0.10"

# Core affinity
core_affinity = "0.8"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Random (test data generation)
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level    = 3
lto          = "fat"
codegen-units = 1
panic        = "abort"

[profile.bench]
opt-level    = 3
lto          = "thin"
codegen-units = 1
