[package]
name    = "hot-tier"
version.workspace = true
edition.workspace = true

[dependencies]
atlas-types      = { workspace = true }
crossbeam        = { workspace = true }
crossbeam-channel = { workspace = true }
dashmap          = "6.1.0"
core_affinity    = { workspace = true }
tracing          = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.28.0", features = ["connect", "rustls-tls-native-roots"] }
futures-util = "0.3.32"
serde_json.workspace = true
fastrand = "2.3.0"

[dev-dependencies]
criterion = { workspace = true }
rand      = { workspace = true }

[[bench]]
name    = "hot_tier_bench"
harness = false
