[package]
name    = "warm-tier"
version.workspace = true
edition.workspace = true

[dependencies]
atlas-types       = { workspace = true }
crossbeam-channel = { workspace = true }
tracing           = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name    = "warm_tier_bench"
harness = false
